--- a/node/package.json
+++ b/node/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "node-fetch": "^3.3.2"
   },
