--- a/node/package.json
+++ b/node/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "node": "^23.4.0",
     "node-fetch": "^3.3.2"
   },
   "name": "node",
